[tool.poetry]
name = "comp.suhian.li"
version = "0.1.0"
description = ""
authors = ["MooGoo <moogoo78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
fabric = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
